<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/app_name">

    <PreferenceCategory
        android:key="audio_category"
        android:title="@string/advanced_settings">

        <com.android.soundcontrol.SecureSettingCustomSeekBarPreference
            android:defaultValue="0"
            android:key="headphone_gain"
            android:max="20"
            app:min="-40"
            android:icon="@drawable/ic_headphone"
            android:title="@string/headphone_gain"
            android:summary="@string/headphone_gain_summary"
            app:showSign="true"
            app:units="dB" />

        <com.android.soundcontrol.SecureSettingCustomSeekBarPreference
            android:defaultValue="0"
            android:key="microphone_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_mic"
            android:title="@string/microphone_gain"
            android:summary="@string/microphone_gain_summary"
            app:showSign="true"
            app:units="dB" />

        <com.android.soundcontrol.SecureSettingCustomSeekBarPreference
            android:defaultValue="0"
            android:key="speaker_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_speaker"
            android:title="@string/speaker_gain"
            android:summary="@string/speaker_gain_summary"
            app:showSign="true"
            app:units="dB" />

    </PreferenceCategory>

</PreferenceScreen>
